White space wrapping fix for setup notes

--- a/src/components/Setups/Setups.scss
+++ b/src/components/Setups/Setups.scss
@@ -86,6 +86,7 @@
 
             .note {
                 margin-bottom: 0.15em;
+                white-space: normal;
             }
         }
     }
